--- a/vanilla/mate-doku/index.html
+++ b/vanilla/mate-doku/index.html
@@ -26,303 +26,7 @@
       href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"
       rel="stylesheet"
     />
-
-    <style type="text/css">
-      html,
-      body {
-        background-color: #fafafa;
-        font-weight: 800;
-        /* font-size: 20px; */
-        font-family: "Quicksand", sans-serif;
-        background-image: url("./assets/main.jpg");
-        background-size: cover;
-        background-repeat: no-repeat;
-        padding-top: 60px;
-      }
-
-      footer {
-        bottom: 15px;
-        text-align: center;
-        font-size: 16px;
-      }
-
-      ::-webkit-scrollbar {
-        display: none;
-      }
-
-      .fixed-header {
-        width: 100%;
-        position: fixed;
-        background-color: #303030;
-        padding: 4px 0;
-        color: #eee;
-        top: 0;
-        white-space: nowrap;
-        box-shadow: 0 3rem 5rem rgba(0, 0, 0, 0.3);
-      }
-
-      .header-title {
-        padding-left: 5%;
-        float: left;
-      }
-
-      .logo {
-        margin: 5px;
-        width: 50px;
-        height: 50px;
-      }
-
-      .logo-writing {
-        margin-top: 5px;
-        padding: 15px;
-        width: 275px;
-        height: 60px;
-      }
-
-      .header-info {
-        padding-right: 5%;
-        padding-top: 15px;
-        font-size: 24px;
-        background-color: #303030;
-        border: none;
-        float: right;
-      }
-
-      .puzzle-title {
-        padding-top: 0;
-        margin-top: 0;
-        font-family: "VT323";
-        text-shadow: 2px 0 #ccc;
-        font-size: 60px;
-        color: black;
-        padding-bottom: 15px;
-        text-align: center;
-      }
-
-      #cell-0-0,
-      #cell-1-0,
-      #cell-2-0 {
-        border-top: 2px solid #000000;
-      }
-      #cell-2-0 {
-        border-right: 2px solid #000000;
-        border-top-right-radius: 10%;
-      }
-      #cell-0-0 {
-        border-left: 2px solid #000000;
-        border-top-left-radius: 10%;
-      }
-
-      #cell-2-1 {
-        border-right: 2px solid #000000;
-      }
-
-      #cell-0-1 {
-        border-left: 2px solid #000000;
-      }
-
-      #cell-0-2,
-      #cell-1-2,
-      #cell-2-2 {
-        border-bottom: 2px solid #000000;
-      }
-      #cell-2-2 {
-        border-right: 2px solid #000000;
-        border-bottom-right-radius: 10%;
-      }
-
-      #cell-0-2 {
-        border-left: 2px solid #000000;
-        border-bottom-left-radius: 10%;
-      }
-
-      /* -------------------------- */
-      /* CLASSES TO MAKE MODAL WORK */
-      .close-modal-btn {
-        position: absolute;
-        top: 1.2rem;
-        right: 2rem;
-        font-size: 5rem;
-        color: #ccc;
-        cursor: pointer;
-        border: none;
-        background: none;
-      }
-
-      .hidden {
-        display: none;
-      }
-
-      .mod {
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        width: 70%;
-        background-color: #eee;
-        padding: 6rem;
-        border-radius: 5px;
-        box-shadow: 0 3rem 5rem rgba(0, 0, 0, 0.3);
-        z-index: 10;
-      }
-
-      .form-modal {
-        background-image: url("./assets/mod-reverse.jpg");
-        color: white;
-        background-size: cover;
-        background-repeat: no-repeat;
-        background-position: 50% 50%;
-      }
-
-      .form-title {
-        padding-bottom: 15px;
-      }
-
-      .form {
-        color: #333;
-      }
-
-      .overlay {
-        position: fixed;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        background-color: rgba(0, 0, 0, 0.6);
-        backdrop-filter: blur(3px);
-        z-index: 5;
-      }
-
-      .info-modal {
-        font-size: 20px;
-        color: #ccc;
-        background-image: url("./assets/mod.jpg");
-        background-size: cover;
-        background-repeat: no-repeat;
-        background-position: 50% 50%;
-      }
-
-      .info-title {
-        font-size: 48px;
-        padding-bottom: 15px;
-        text-align: center;
-      }
-
-      .game-over-modal {
-        font-size: 20px;
-        color: #ccc;
-        text-align: end;
-        background-image: url("./assets/mod.jpg");
-        background-size: cover;
-        background-repeat: no-repeat;
-        background-position: 10% 50%;
-      }
-
-      .win-modal {
-        font-size: 20px;
-        font-weight: bolder;
-        color: white;
-        text-shadow: 2px 0 #000, -2px 0 #000, 0 2px #000, 0 -2px #000,
-          1px 1px #000, -1px -1px #000, 1px -1px #000, -1px 1px #000;
-        text-align: center;
-        background-image: url("./win-cat1.jpg");
-        background-size: cover;
-        background-repeat: no-repeat;
-        background-position: 25% 50%;
-      }
-
-      /* -------------------------- */
-      /* CLASSES TO MAKE SEARCH FORM */
-      .container {
-        width: 100%;
-        height: 100%;
-      }
-
-      .doku-container {
-        /* position: relative; */
-        align-content: center;
-        justify-content: center;
-        margin-left: auto;
-        margin-right: auto;
-        width: 50%;
-        /* padding: 25%; */
-        padding-top: 0%;
-        font-family: "VT323";
-        font-size: 20px;
-      }
-
-      .grid-group {
-        width: 100%;
-        display: grid;
-        grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
-        grid-template-rows: 1fr 1fr 1fr 1fr 1fr;
-        justify-items: stretch;
-        align-items: inital;
-        border-radius: 10%;
-        border-collapse: collapse;
-        align-content: center;
-        justify-content: center;
-        margin-left: auto;
-        margin-right: auto;
-      }
-
-      .inside {
-        padding: 20px 24px;
-        cursor: pointer;
-        text-align: center;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        background-color: #eee;
-        color: #444;
-        border: 1px solid grey;
-        aspect-ratio: 1;
-      }
-
-      .frame {
-        padding: 20px 24px;
-        display: flex;
-        text-align: center;
-        align-items: center;
-        justify-content: center;
-        color: black;
-        aspect-ratio: 1;
-      }
-
-      .inside:hover {
-        background-color: #d0d0d0;
-      }
-
-      .frame-logo {
-        width: 100px;
-        height: 100px;
-      }
-
-      .summary {
-        padding: 20px 24px;
-        cursor: pointer;
-        text-align: center;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        border-radius: 100%;
-      }
-
-      .summary:hover {
-        background-color: #d0d0d0;
-        /* background-position: 25% 50%; */
-        opacity: 0.2;
-        color: black;
-      }
-
-      .disabled {
-        cursor: not-allowed;
-      }
-
-      .disabled:hover {
-        background-color: #eee;
-      }
-    </style>
+    <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
     <div class="fixed-header">
