:zap: Ciao Mirko!

--- a/vanilla/mate-doku/index.html
+++ b/vanilla/mate-doku/index.html
@@ -75,6 +75,15 @@
           <div id="cell-2-2" class="inside"></div>
           <div class="frame"></div>
         </div>
+        <footer>
+          <p>
+            Fatto con amore ❤️ da Mirco, in onore di tutti i mate-magici! ✨
+          </p>
+          <p>
+            Per suggerimenti o segnalazioni:
+            <a href="mailto:mate-doku@yopmail.com">mate-doku@yopmail.com</a>
+          </p>
+        </footer>
       </div>
 
       <div id="form-modal" class="mod hidden form-modal">
@@ -148,12 +157,5 @@
     <div class="overlay hidden"></div>
 
     <script src="script.js"></script>
-    <footer>
-      <p>Fatto con amore ❤️ da Mirco, in onore di tutti i mate-magici! ✨</p>
-      <p>
-        Per suggerimenti o segnalazioni:
-        <a href="mailto:mate-doku@yopmail.com">mate-doku@yopmail.com</a>
-      </p>
-    </footer>
   </body>
 </html>
