mprove header and title

--- a/vanilla/mate-doku/index.html
+++ b/vanilla/mate-doku/index.html
@@ -29,7 +29,7 @@
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
-    <div class="fixed-header">
+    <div class="header">
       <div class="header-title">
         <img src="./assets/mate-logo.png" alt="Logo" class="logo" />
         <img src="./assets/mate-write.png" alt="Logo" class="logo-writing" />
