--- a/vanilla/mate-doku/index.html
+++ b/vanilla/mate-doku/index.html
@@ -75,16 +75,14 @@
           <div id="cell-2-2" class="inside"></div>
           <div class="frame"></div>
         </div>
-        <footer>
-          <p>
-            Fatto con amore ❤️ da Mirco, in onore di tutti i mate-magici! ✨
-          </p>
-          <p>
-            Per suggerimenti o segnalazioni:
-            <a href="mailto:mate-doku@yopmail.com">mate-doku@yopmail.com</a>
-          </p>
-        </footer>
       </div>
+      <footer>
+        <p>Fatto con amore ❤️ da Mirco, in onore di tutti i mate-magici! ✨</p>
+        <p>
+          Per suggerimenti o segnalazioni:
+          <a href="mailto:mate-doku@yopmail.com">mate-doku@yopmail.com</a>
+        </p>
+      </footer>
 
       <div id="form-modal" class="mod hidden form-modal">
         <button id="close-form-modal" class="close-modal-btn">&times;</button>
