Grid refactor success

--- a/vanilla/mate-doku/index.html
+++ b/vanilla/mate-doku/index.html
@@ -54,26 +54,27 @@
           <div id="ext-row-0" class="frame"></div>
           <div id="ext-row-1" class="frame"></div>
           <div id="ext-row-2" class="frame"></div>
-          <div
-            id="ext-corner-right"
-            class="frame"
-            style="background-color: none"
-          ></div>
           <div id="ext-col-0" class="frame"></div>
           <div id="cell-0-0" class="inside"></div>
           <div id="cell-1-0" class="inside"></div>
           <div id="cell-2-0" class="inside"></div>
-          <div id="ps" class="frame"></div>
           <div id="ext-col-1" class="frame"></div>
           <div id="cell-0-1" class="inside"></div>
           <div id="cell-1-1" class="inside"></div>
           <div id="cell-2-1" class="inside"></div>
-          <div id="score" class="frame"></div>
           <div id="ext-col-2" class="frame"></div>
           <div id="cell-0-2" class="inside"></div>
           <div id="cell-1-2" class="inside"></div>
           <div id="cell-2-2" class="inside"></div>
-          <div class="frame"></div>
+        </div>
+        <div class="stat-group">
+          <div
+            id="ext-corner-right"
+            class="frame-stat"
+            style="background-color: none"
+          ></div>
+          <div id="ps" class="frame-stat"></div>
+          <div id="score" class="frame-stat"></div>
         </div>
       </div>
       <footer>
