--- a/vanilla/mate-doku/index.html
+++ b/vanilla/mate-doku/index.html
@@ -41,8 +41,8 @@
       </div>
     </div>
     <div class="container">
-      <h1 class="puzzle-title">Il Puzzle Di Oggi!</h1>
-      <div class="doku-container">
+      <h1 class="puzzle-title container-block">Il Puzzle Di Oggi!</h1>
+      <div class="doku-container container-block">
         <div class="grid-group">
           <div id="ext-corner-left" class="frame">
             <img
@@ -77,7 +77,7 @@
           <div id="score" class="frame-stat"></div>
         </div>
       </div>
-      <footer>
+      <footer class="container-block">
         <p>Fatto con amore ❤️ da Mirco, in onore di tutti i mate-magici! ✨</p>
         <p>
           Per suggerimenti o segnalazioni:
