--- a/vanilla/mate-doku/index.html
+++ b/vanilla/mate-doku/index.html
@@ -55,17 +55,23 @@
           <div id="ext-row-1" class="frame"></div>
           <div id="ext-row-2" class="frame"></div>
           <div id="ext-col-0" class="frame"></div>
-          <div id="cell-0-0" class="inside"></div>
-          <div id="cell-1-0" class="inside"></div>
-          <div id="cell-2-0" class="inside"></div>
+          <div id="cell-0-0" class="inside top-doku-cell left-doku-cell"></div>
+          <div id="cell-1-0" class="inside top-doku-cell"></div>
+          <div id="cell-2-0" class="inside top-doku-cell right-doku-cell"></div>
           <div id="ext-col-1" class="frame"></div>
-          <div id="cell-0-1" class="inside"></div>
+          <div id="cell-0-1" class="inside left-doku-cell"></div>
           <div id="cell-1-1" class="inside"></div>
-          <div id="cell-2-1" class="inside"></div>
+          <div id="cell-2-1" class="inside right-doku-cell"></div>
           <div id="ext-col-2" class="frame"></div>
-          <div id="cell-0-2" class="inside"></div>
-          <div id="cell-1-2" class="inside"></div>
-          <div id="cell-2-2" class="inside"></div>
+          <div
+            id="cell-0-2"
+            class="inside bottom-doku-cell left-doku-cell"
+          ></div>
+          <div id="cell-1-2" class="inside bottom-doku-cell"></div>
+          <div
+            id="cell-2-2"
+            class="inside bottom-doku-cell right-doku-cell"
+          ></div>
         </div>
         <div class="stat-group">
           <div
