--- a/vanilla/mate-doku/index.html
+++ b/vanilla/mate-doku/index.html
@@ -92,8 +92,8 @@
       </footer>
 
       <div id="form-modal" class="mod hidden form-modal">
-        <button id="close-form-modal" class="close-modal-btn">&times;</button>
-        <h1 class="form-title">Chi sarà?</h1>
+        <button id="close-form-modal" class="close-mod-btn">&times;</button>
+        <h1 class="mod-title form-title">Chi sarà?</h1>
         <h4>Cerca un <em>mate</em>:</h4>
         <form id="form" class="form">
           <input id="cell-id-input" type="hidden" name="cell" value="" />
@@ -113,8 +113,8 @@
     </div>
 
     <div id="info-modal" class="mod hidden info-modal">
-      <button id="close-info-modal" class="close-modal-btn">&times;</button>
-      <h2 class="info-title">Regolamento</h2>
+      <button id="close-info-modal" class="close-mod-btn">&times;</button>
+      <h2 class="mod-title">Regolamento</h2>
       <ul>
         <li>
           Lo scopo del gioco è riempire ciascuno dei nove quadrati con il
@@ -136,22 +136,20 @@
     <div id="game-over-modal" class="mod hidden game-over-modal">
       <button
         id="close-game-over-modal"
-        class="close-modal-btn"
+        class="close-mod-btn"
         style="color: #ccc"
       >
         &times;
       </button>
-      <h2 class="info-title">☠️ GAME OVER ☠️</h2>
+      <h2 class="mod-title">☠️ GAME OVER ☠️</h2>
       <p>Hai finito i tentativi a tua disposizione!</p>
       <p>Ritorna domani per un nuovo, fantastico puzzle!</p>
     </div>
     <div class="overlay hidden"></div>
 
     <div id="win-modal" class="mod hidden win-modal">
-      <button id="close-win-modal" class="close-modal-btn" style="color: #ccc">
-        &times;
-      </button>
-      <h2 class="info-title">🎊 YOU WIN 🎊</h2>
+      <button id="close-win-modal" class="close-mod-btn">&times;</button>
+      <h2 class="mod-title">🎊 YOU WIN 🎊</h2>
       <h3>CONGRATULAZIONI! 🎉</h3>
       <h3>Conosci davvero bene tutti i tuoi compagni!</h3>
       <h3>
