Fix modal responsiveness

--- a/vanilla/acat-doku/index.html
+++ b/vanilla/acat-doku/index.html
@@ -89,8 +89,8 @@
     </div>
 
     <div id="form-modal" class="mod hidden form-modal">
-      <button id="close-form-modal" class="close-modal-btn">&times;</button>
-      <h1 class="form-title">Chi sarà?</h1>
+      <button id="close-form-modal" class="close-mod-btn">&times;</button>
+      <h1 class="mod-title form-title">Chi sarà?</h1>
       <h4>Cerca un a-micio:</h4>
       <form id="form" class="form">
         <input id="cell-id-input" type="hidden" name="cell" value="" />
@@ -109,8 +109,10 @@
     <div class="overlay hidden"></div>
 
     <div id="info-modal" class="mod hidden info-modal">
-      <button id="close-info-modal" class="close-modal-btn">&times;</button>
-      <h2 class="info-title">Regolamento</h2>
+      <button id="close-info-modal" class="close-mod-btn" style="color: #444">
+        &times;
+      </button>
+      <h2 class="mod-title">Regolamento</h2>
       <ul>
         <li>
           Lo scopo del gioco è riempire ciascuno dei nove quadrati con l'a-micio
@@ -133,22 +135,22 @@
     <div id="game-over-modal" class="mod hidden game-over-modal">
       <button
         id="close-game-over-modal"
-        class="close-modal-btn"
+        class="close-mod-btn"
         style="color: #ccc"
       >
         &times;
       </button>
-      <h2 class="info-title">☠️ GAME OVER ☠️</h2>
+      <h2 class="mod-title">☠️ GAME OVER ☠️</h2>
       <p>Hai finito i tentativi a tua disposizione!</p>
       <p>Ritorna domani per un nuovo, fantastico puzzle!</p>
     </div>
     <div class="overlay hidden"></div>
 
     <div id="win-modal" class="mod hidden win-modal">
-      <button id="close-win-modal" class="close-modal-btn" style="color: #ccc">
+      <button id="close-win-modal" class="close-mod-btn" style="color: #ccc">
         &times;
       </button>
-      <h2 class="info-title">🎊 YOU WIN 🎊</h2>
+      <h2 class="mod-title">🎊 YOU WIN 🎊</h2>
       <h3>CONGRATULAZIONI! 🎉</h3>
       <h3>Conosci davvero bene tutti i tuoi a-mici!</h3>
       <h3>
