Fix recap modal graphic

--- a/vanilla/mate-doku/index.html
+++ b/vanilla/mate-doku/index.html
@@ -74,11 +74,7 @@
           ></div>
         </div>
         <div class="stat-group">
-          <div
-            id="ext-corner-right"
-            class="frame-stat"
-            style="background-color: none"
-          ></div>
+          <div id="ext-corner-right" class="frame-stat"></div>
           <div id="ps" class="frame-stat"></div>
           <div id="score" class="frame-stat"></div>
         </div>
