Add season and zodiac to acat doku

--- a/vanilla/acat-doku/index.html
+++ b/vanilla/acat-doku/index.html
@@ -116,6 +116,11 @@
         </li>
         <li>Hai solamente 9 tentativi, quindi scegli attentamente!</li>
         <li>
+          Ad ogni amicio sono stati assegnati due tipi elementali, sulla base
+          delle proprie caratteristiche (ad esempio, tipo buio se è una persona
+          che vive di notte)
+        </li>
+        <li>
           Se viene chiesto un amicio di un tipo, può essere utilizzato qualsiasi
           amicio che ha almeno un tipo pari a quello richiesto.
         </li>
