--- a/vanilla/acat-doku/index.html
+++ b/vanilla/acat-doku/index.html
@@ -76,7 +76,9 @@
         </div>
       </div>
       <footer>
-        <p>Fatto con amore ❤️ da Irene e Mirco, per tutti i nostri a-mici!</p>
+        <p>
+          Fatto con amore ❤️ da Irene, Viga e Depa per tutti i nostri a-mici!
+        </p>
         <p>
           Puoi scriverci a:
           <a href="mailto:acat-doku@yopmail.com">acat-doku@yopmail.com</a>
@@ -117,8 +119,8 @@
         <li>Hai solamente 9 tentativi, quindi scegli attentamente!</li>
         <li>
           Ad ogni amicio sono stati assegnati due tipi elementali, sulla base
-          delle proprie caratteristiche (ad esempio, tipo buio se è una persona
-          che vive di notte)
+          delle proprie caratteristiche (ad esempio, tipo roccia se arrampica,
+          tipo buio se lavora di notte, etc.)
         </li>
         <li>
           Se viene chiesto un amicio di un tipo, può essere utilizzato qualsiasi
