Fix dedication mate

--- a/vanilla/mate-doku/index.html
+++ b/vanilla/mate-doku/index.html
@@ -80,7 +80,7 @@
         </div>
       </div>
       <footer class="container-block">
-        <p>Fatto con amore ❤️ da Mirco, in onore di tutti i mate-magici! ✨</p>
+        <p>Fatto con amore ❤️ in onore di tutti i mate-magici! ✨</p>
         <p>
           Per suggerimenti o segnalazioni:
           <a href="mailto:mate-doku@yopmail.com">mate-doku@yopmail.com</a>
