--- a/vanilla/mate-doku/index.html
+++ b/vanilla/mate-doku/index.html
@@ -145,7 +145,7 @@
 
     <div id="win-modal" class="mod hidden win-modal">
       <button id="close-win-modal" class="close-mod-btn">&times;</button>
-      <h2 class="mod-title">🎊 YOU WIN 🎊</h2>
+      <h2 class="mod-title">🎊 HAI VINTO 🎊</h2>
       <h3>CONGRATULAZIONI! 🎉</h3>
       <h3>Conosci davvero bene tutti i tuoi compagni!</h3>
       <h3>
