Improve graphics on acat

--- a/vanilla/acat-doku/index.html
+++ b/vanilla/acat-doku/index.html
@@ -149,7 +149,7 @@
       <button id="close-win-modal" class="close-mod-btn" style="color: #ccc">
         &times;
       </button>
-      <h2 class="mod-title">🎊 YOU WIN 🎊</h2>
+      <h2 class="mod-title">🎊 HAI VINTO 🎊</h2>
       <h3>CONGRATULAZIONI! 🎉</h3>
       <h3>Conosci davvero bene tutti i tuoi a-mici!</h3>
       <h3>
