--- a/vanilla/ravioli-doku/index.html
+++ b/vanilla/ravioli-doku/index.html
@@ -19,7 +19,7 @@
       rel="stylesheet"
     />
 
-    <link rel="icon" href="./assets/mate-logo.png" type="image/x-icon" />
+    <link rel="icon" href="./assets/ravioli-logo.png" type="image/x-icon" />
     <title>RavioliDoku</title>
 
     <link
@@ -31,8 +31,8 @@
   <body>
     <div class="header">
       <div class="header-title">
-        <img src="./assets/mate-logo.png" alt="Logo" class="logo" />
-        <img src="./assets/mate-write.png" alt="Logo" class="logo-writing" />
+        <img src="./assets/ravioli-logo.png" alt="Logo" class="logo" />
+        <img src="./assets/ravioli-write.png" alt="Logo" class="logo-writing" />
       </div>
       <div>
         <button class="header-info">
@@ -45,7 +45,11 @@
       <div class="doku-container container-block">
         <div class="grid-group">
           <div id="ext-corner-left" class="frame">
-            <img src="./assets/mate-logo.png" alt="Logo" class="frame-logo" />
+            <img
+              src="./assets/ravioli-logo.png"
+              alt="Logo"
+              class="frame-logo"
+            />
           </div>
           <div id="ext-row-0" class="frame"></div>
           <div id="ext-row-1" class="frame"></div>
@@ -76,7 +80,9 @@
         </div>
       </div>
       <footer class="container-block">
-        <p>Fatto con amore ❤️ da Mirco, in onore di tutti i ravioli! ✨</p>
+        <p>
+          Fatto con amore ❤️ da Irene e Mirco, in onore di tutti i ravioli! ✨
+        </p>
         <p>
           Per suggerimenti o segnalazioni:
           <a href="mailto:ravioli-doku@yopmail.com">ravioli-doku@yopmail.com</a>
