Unify footer text

--- a/vanilla/ravioli-doku/index.html
+++ b/vanilla/ravioli-doku/index.html
@@ -147,12 +147,12 @@
 
     <div id="win-modal" class="mod hidden win-modal">
       <button id="close-win-modal" class="close-mod-btn">&times;</button>
-      <h2 class="mod-title">🎊 YOU WIN 🎊</h2>
+      <h2 class="mod-title">🎊 HAI VINTO 🎊</h2>
       <h3>CONGRATULAZIONI! 🎉</h3>
-      <h3>Conosci davvero bene tutti i tuoi compagni!</h3>
+      <h3>Conosci davvero bene tutti i tuoi amici!</h3>
       <h3>
-        L'università ti ha lasciato dei ricordi che porterai sempre nel cuore,
-        custodiscili con amore! ❤️
+        L'amicizia è un dono imporante, custodiscilo sempre e alimentalo con il
+        tuo amore! ❤️
       </h3>
     </div>
     <div class="overlay hidden"></div>
