Add type btn and modal

--- a/vanilla/acat-doku/index.html
+++ b/vanilla/acat-doku/index.html
@@ -35,9 +35,14 @@
         <img src="./assets/acat-write.png" alt="Logo" class="logo-writing" />
       </div>
       <div>
-        <button class="header-info">
-          <i id="info-btn" class="fa fa-info-circle"></i>
-        </button>
+        <div class="header-type-info">
+          <button class="header-info">
+            <i id="info-btn" class="fa fa-info-circle"></i>
+          </button>
+          <button class="header-type">
+            <i id="type-btn" class="fa fa-tint"></i>
+          </button>
+        </div>
       </div>
     </div>
     <div class="container">
@@ -110,6 +115,30 @@
         &times;
       </button>
       <h2 class="mod-title">Regolamento</h2>
+      <ul>
+        <li>
+          Lo scopo del gioco è riempire ciascuno dei nove quadrati con l'a-micio
+          corretto!
+        </li>
+        <li>Hai solamente 9 tentativi, quindi scegli attentamente!</li>
+        <li>
+          Ad ogni amicio sono stati assegnati due tipi elementali, sulla base
+          delle proprie caratteristiche (ad esempio, tipo roccia se arrampica,
+          tipo buio se lavora di notte, etc.)
+        </li>
+        <li>Nuovo puzzle a mezzanotte EST!</li>
+        <li>
+          Per segnalare malfunzionamenti o dare feedback:
+          <a href="mailto:acat-doku@yopmail.com">acat-doku@yopmail.com</a>
+        </li>
+      </ul>
+    </div>
+
+    <div id="type-modal" class="mod hidden type-modal">
+      <button id="close-type-modal" class="close-mod-btn" style="color: #444">
+        &times;
+      </button>
+      <h2 class="mod-title">Tipi</h2>
       <ul>
         <li>
           Lo scopo del gioco è riempire ciascuno dei nove quadrati con l'a-micio
