Add type modal contents

--- a/vanilla/acat-doku/index.html
+++ b/vanilla/acat-doku/index.html
@@ -139,23 +139,20 @@
         &times;
       </button>
       <h2 class="mod-title">Tipi</h2>
-      <ul>
-        <li>
-          Lo scopo del gioco è riempire ciascuno dei nove quadrati con l'a-micio
-          corretto!
-        </li>
-        <li>Hai solamente 9 tentativi, quindi scegli attentamente!</li>
-        <li>
-          Ad ogni amicio sono stati assegnati due tipi elementali, sulla base
-          delle proprie caratteristiche (ad esempio, tipo roccia se arrampica,
-          tipo buio se lavora di notte, etc.)
-        </li>
-        <li>Nuovo puzzle a mezzanotte EST!</li>
-        <li>
-          Per segnalare malfunzionamenti o dare feedback:
-          <a href="mailto:acat-doku@yopmail.com">acat-doku@yopmail.com</a>
-        </li>
-      </ul>
+      <div class="type-group">
+        <img src="./assets/types/Buio.png" class="cell-img cell-type" />
+        <div class="cell-type">Lavora di notte</div>
+        <img src="./assets/types/Ghiaccio.png" class="cell-img cell-type" />
+        <div class="cell-type">Cura le altre persone</div>
+        <img src="./assets/types/Erba.png" class="cell-img cell-type" />
+        <div class="cell-type">Cura le piante o è vegetariano</div>
+        <img src="./assets/types/Elettro.png" class="cell-img cell-type" />
+        <div class="cell-type">Lavora nell'ambito tecnologico</div>
+        <img src="./assets/types/Psico.png" class="cell-img cell-type" />
+        <div class="cell-type">Lavora a contatto con le persone</div>
+        <img src="./assets/types/Roccia.png" class="cell-img cell-type" />
+        <div class="cell-type">Arrampica o scala</div>
+      </div>
     </div>
 
     <div id="game-over-modal" class="mod hidden game-over-modal">
