Update type modal text

--- a/vanilla/acat-doku/index.html
+++ b/vanilla/acat-doku/index.html
@@ -85,7 +85,7 @@
           Fatto con amore ❤️ da Irene, Viga e Depa per tutti i nostri a-mici!
         </p>
         <p>
-          Puoi scriverci a:
+          Per suggerimenti o segnalazioni:
           <a href="mailto:acat-doku@yopmail.com">acat-doku@yopmail.com</a>
         </p>
       </footer>
@@ -140,17 +140,41 @@
       </button>
       <h2 class="mod-title">Tipi</h2>
       <div class="type-group">
-        <img src="./assets/types/Buio.png" class="cell-img cell-type" />
+        <img
+          src="./assets/types/Buio.png"
+          alt="Buio"
+          class="cell-img cell-type"
+        />
         <div class="cell-type">Lavora di notte</div>
-        <img src="./assets/types/Ghiaccio.png" class="cell-img cell-type" />
+        <img
+          src="./assets/types/Ghiaccio.png"
+          alt="Ghiaccio"
+          class="cell-img cell-type"
+        />
         <div class="cell-type">Cura le altre persone</div>
-        <img src="./assets/types/Erba.png" class="cell-img cell-type" />
+        <img
+          src="./assets/types/Erba.png"
+          alt="Erba"
+          class="cell-img cell-type"
+        />
         <div class="cell-type">Cura le piante o è vegetariano</div>
-        <img src="./assets/types/Elettro.png" class="cell-img cell-type" />
+        <img
+          src="./assets/types/Elettro.png"
+          alt="Elettro"
+          class="cell-img cell-type"
+        />
         <div class="cell-type">Lavora nell'ambito tecnologico</div>
-        <img src="./assets/types/Psico.png" class="cell-img cell-type" />
+        <img
+          src="./assets/types/Psico.png"
+          alt="Psico"
+          class="cell-img cell-type"
+        />
         <div class="cell-type">Lavora a contatto con le persone</div>
-        <img src="./assets/types/Roccia.png" class="cell-img cell-type" />
+        <img
+          src="./assets/types/Roccia.png"
+          alt="Roccia"
+          class="cell-img cell-type"
+        />
         <div class="cell-type">Arrampica o scala</div>
       </div>
     </div>
