Add lazy loading on png

--- a/vanilla/acat-doku/index.html
+++ b/vanilla/acat-doku/index.html
@@ -141,36 +141,42 @@
       <h2 class="mod-title">Tipi</h2>
       <div class="type-group">
         <img
+          loading="lazy"
           src="./assets/types/Buio.png"
           alt="Buio"
           class="cell-img cell-type"
         />
         <div class="cell-type">Lavora di notte</div>
         <img
+          loading="lazy"
           src="./assets/types/Ghiaccio.png"
           alt="Ghiaccio"
           class="cell-img cell-type"
         />
         <div class="cell-type">Cura le altre persone</div>
         <img
+          loading="lazy"
           src="./assets/types/Erba.png"
           alt="Erba"
           class="cell-img cell-type"
         />
         <div class="cell-type">Cura le piante o è vegetariano</div>
         <img
+          loading="lazy"
           src="./assets/types/Elettro.png"
           alt="Elettro"
           class="cell-img cell-type"
         />
         <div class="cell-type">Lavora nell'ambito tecnologico</div>
         <img
+          loading="lazy"
           src="./assets/types/Psico.png"
           alt="Psico"
           class="cell-img cell-type"
         />
         <div class="cell-type">Lavora a contatto con le persone</div>
         <img
+          loading="lazy"
           src="./assets/types/Roccia.png"
           alt="Roccia"
           class="cell-img cell-type"
