Update types moda

--- a/vanilla/acat-doku/index.html
+++ b/vanilla/acat-doku/index.html
@@ -182,6 +182,20 @@
           class="cell-img cell-type"
         />
         <div class="cell-type">Arrampica o scala</div>
+        <img
+          loading="lazy"
+          src="./assets/types/Folletto.png"
+          alt="Folletto"
+          class="cell-img cell-type"
+        />
+        <div class="cell-type">Ha studiato o produce Arte</div>
+        <img
+          loading="lazy"
+          src="./assets/types/Acciaio.png"
+          alt="Acciaio"
+          class="cell-img cell-type"
+        />
+        <div class="cell-type">Lavora con grandi macchinari</div>
       </div>
     </div>
 
