First bugfix release

--- a/vanilla/acat-doku/index.html
+++ b/vanilla/acat-doku/index.html
@@ -124,7 +124,7 @@
           delle proprie caratteristiche (ad esempio, tipo roccia se arrampica,
           tipo buio se lavora di notte, etc.)
         </li>
-        <li>Nuovo puzzle a mezzanotte EST!</li>
+        <li>Nuovo puzzle a mezzanotte GMT!</li>
         <li>
           Per segnalare malfunzionamenti o dare feedback:
           <a href="mailto:acat-doku@yopmail.com">acat-doku@yopmail.com</a>
