--- a/vanilla/mate-doku/index.html
+++ b/vanilla/mate-doku/index.html
@@ -119,7 +119,7 @@
         <li>
           Non si può riutilizzare lo stesso <em>mate</em> più di una volta.
         </li>
-        <li>Nuovo puzzle a mezzanotte EST!</li>
+        <li>Nuovo puzzle a mezzanotte GMT!</li>
         <li>
           Per segnalare malfunzionamenti o dare feedback:
           <a href="mailto:mate-doku@yopmail.com">mate-doku@yopmail.com</a>
