--- a/vanilla/ravioli-doku/index.html
+++ b/vanilla/ravioli-doku/index.html
@@ -117,7 +117,7 @@
         <li>
           Non si può riutilizzare lo stesso <em>raviolo</em> più di una volta.
         </li>
-        <li>Nuovo puzzle a mezzanotte EST!</li>
+        <li>Nuovo puzzle a mezzanotte GMT!</li>
         <li>
           Per segnalare malfunzionamenti o dare feedback:
           <a href="mailto:ravioli-doku@yopmail.com">ravioli-doku@yopmail.com</a>
